--- a/src/stories/14_DeveloperManual.mdx
+++ b/src/stories/14_DeveloperManual.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/blocks'
 
-<Meta title="Learning/11_Map実装" />
+<Meta title="Learning/14_開発者マニュアル" />
 
 # MapLibre GL JS 実装
 
