fix: Live DemoリンクをVercelに修正

--- a/src/stories/Introduction.mdx
+++ b/src/stories/Introduction.mdx
@@ -33,7 +33,7 @@ export const TableStyle = {
   <a href="https://github.com/BoxPistols/DID-J26" target="_blank" rel="noopener noreferrer" style={LinkStyle}>
     GitHub Repository
   </a>
-  <a href="https://didj.netlify.app/" target="_blank" rel="noopener noreferrer" style={LinkStyle}>
+  <a href="https://didj.vercel.app/" target="_blank" rel="noopener noreferrer" style={LinkStyle}>
     Live Demo
   </a>
 </div>
