--- a/src/stories/15_WeatherApi.mdx
+++ b/src/stories/15_WeatherApi.mdx
@@ -1,25 +1,16 @@
 {/* 15_WeatherApi.mdx */}
 import { Meta } from '@storybook/blocks'
+import { TableStyle } from './components/TableStyle'
 
 <Meta title="Learning/15_天気予報API仕様" />
-
-export const TableStyle = {
-  table: { width: '100%', borderCollapse: 'collapse', margin: '16px 0' },
-  thead: { backgroundColor: 'rgba(74, 158, 255, 0.1)', borderBottom: '2px solid rgba(74, 158, 255, 0.3)' },
-  th: { padding: '12px', textAlign: 'left', fontWeight: 600 },
-  tr: { borderBottom: '1px solid rgba(255, 255, 255, 0.1)' },
-  td: { padding: '12px' },
-  tdCenter: { padding: '12px', textAlign: 'center' },
-  code: { backgroundColor: 'rgba(74, 158, 255, 0.1)', padding: '2px 6px', borderRadius: '4px', fontFamily: 'monospace' }
-}
 
 # 天気予報API仕様書
 
 本ライブラリには**2つの天気関連システム**が実装されています。
 
 <table style={TableStyle.table}>
-  <thead>
-    <tr style={TableStyle.thead}>
+  <thead style={TableStyle.thead}>
+    <tr>
       <th style={TableStyle.th}>システム</th>
       <th style={TableStyle.th}>用途</th>
       <th style={TableStyle.th}>API</th>
@@ -61,8 +52,8 @@ URL: https://api.open-meteo.com/v1/forecast
 ### 1-2. キーボードショートカット
 
 <table style={TableStyle.table}>
-  <thead>
-    <tr style={TableStyle.thead}>
+  <thead style={TableStyle.thead}>
+    <tr>
       <th style={{...TableStyle.th, textAlign: 'center'}}>キー</th>
       <th style={TableStyle.th}>機能</th>
     </tr>
@@ -97,8 +88,8 @@ src/
 ### 1-4. weatherApi.ts 主要関数
 
 <table style={TableStyle.table}>
-  <thead>
-    <tr style={TableStyle.thead}>
+  <thead style={TableStyle.thead}>
+    <tr>
       <th style={TableStyle.th}>関数</th>
       <th style={TableStyle.th}>説明</th>
     </tr>
@@ -197,8 +188,8 @@ const url = `https://api.open-meteo.com/v1/forecast?` +
 ### 1-8. WMO天気コード対応表
 
 <table style={TableStyle.table}>
-  <thead>
-    <tr style={TableStyle.thead}>
+  <thead style={TableStyle.thead}>
+    <tr>
       <th style={{...TableStyle.th, textAlign: 'center'}}>コード</th>
       <th style={TableStyle.th}>天気</th>
       <th style={{...TableStyle.th, textAlign: 'center'}}>アイコン</th>
@@ -314,8 +305,8 @@ URL: https://api.rainviewer.com/public/weather-maps.json
 ### 2-2. rainViewer.ts 主要関数
 
 <table style={TableStyle.table}>
-  <thead>
-    <tr style={TableStyle.thead}>
+  <thead style={TableStyle.thead}>
+    <tr>
       <th style={TableStyle.th}>関数</th>
       <th style={TableStyle.th}>説明</th>
     </tr>
@@ -393,8 +384,8 @@ canFly = true
 ### 3-4. 安全レベル定義
 
 <table style={TableStyle.table}>
-  <thead>
-    <tr style={TableStyle.thead}>
+  <thead style={TableStyle.thead}>
+    <tr>
       <th style={TableStyle.th}>レベル</th>
       <th style={{...TableStyle.th, textAlign: 'center'}}>色</th>
       <th style={TableStyle.th}>説明</th>
@@ -432,8 +423,8 @@ canFly = true
 ### 3-5. 風速基準
 
 <table style={TableStyle.table}>
-  <thead>
-    <tr style={TableStyle.thead}>
+  <thead style={TableStyle.thead}>
+    <tr>
       <th style={{...TableStyle.th, textAlign: 'center'}}>風速 (m/s)</th>
       <th style={{...TableStyle.th, textAlign: 'center'}}>レベル</th>
       <th style={TableStyle.th}>判定</th>
