--- a/src/stories/16_CollisionDetection.mdx
+++ b/src/stories/16_CollisionDetection.mdx
@@ -1,16 +1,8 @@
 {/* 16_CollisionDetection.mdx */}
 import { Meta } from '@storybook/blocks'
+import { TableStyle } from './components/TableStyle'
 
 <Meta title="Learning/16_衝突検出" />
-
-export const TableStyle = {
-  table: { width: '100%', borderCollapse: 'collapse', margin: '16px 0' },
-  thead: { backgroundColor: 'rgba(74, 158, 255, 0.1)', borderBottom: '2px solid rgba(74, 158, 255, 0.3)' },
-  th: { padding: '12px', textAlign: 'left', fontWeight: 600 },
-  tr: { borderBottom: '1px solid rgba(255, 255, 255, 0.1)' },
-  td: { padding: '12px' },
-  code: { backgroundColor: 'rgba(255, 255, 255, 0.1)', padding: '2px 6px', borderRadius: '4px', fontFamily: 'monospace' }
-}
 
 # Collision Detection（衝突検出）
 
@@ -23,8 +15,8 @@ export const TableStyle = {
 `src/lib/utils/collision.ts` は以下の機能を提供します。
 
 <table style={TableStyle.table}>
-  <thead>
-    <tr style={TableStyle.thead}>
+  <thead style={TableStyle.thead}>
+    <tr>
       <th style={TableStyle.th}>関数名</th>
       <th style={TableStyle.th}>用途</th>
       <th style={TableStyle.th}>計算量</th>
@@ -77,8 +69,8 @@ npm install @turf/turf rbush
 衝突検出結果は、ゾーンタイプに応じた色と深刻度を返します。
 
 <table style={TableStyle.table}>
-  <thead>
-    <tr style={TableStyle.thead}>
+  <thead style={TableStyle.thead}>
+    <tr>
       <th style={TableStyle.th}>ゾーンタイプ</th>
       <th style={TableStyle.th}>色</th>
       <th style={TableStyle.th}>カラーコード</th>
@@ -148,8 +140,8 @@ const ZONE_PRIORITY = {
 複数のゾーンが重なる場合、優先順位に基づいて最も重要なゾーンが返されます。
 
 <table style={TableStyle.table}>
-  <thead>
-    <tr style={TableStyle.thead}>
+  <thead style={TableStyle.thead}>
+    <tr>
       <th style={TableStyle.th}>優先順位</th>
       <th style={TableStyle.th}>ゾーンタイプ</th>
       <th style={TableStyle.th}>説明</th>
@@ -295,8 +287,8 @@ const result = checkWaypointCollisionOptimized(waypoint, spatialIndex)
 ### 5.2 パフォーマンス比較
 
 <table style={TableStyle.table}>
-  <thead>
-    <tr style={TableStyle.thead}>
+  <thead style={TableStyle.thead}>
+    <tr>
       <th style={TableStyle.th}>禁止エリア数</th>
       <th style={TableStyle.th}>基本版</th>
       <th style={TableStyle.th}>最適化版</th>
@@ -447,8 +439,8 @@ interface PolygonCollisionResult {
 ### 7.3 深刻度の判定基準
 
 <table style={TableStyle.table}>
-  <thead>
-    <tr style={TableStyle.thead}>
+  <thead style={TableStyle.thead}>
+    <tr>
       <th style={TableStyle.th}>重複割合</th>
       <th style={TableStyle.th}>深刻度</th>
       <th style={TableStyle.th}>説明</th>
